Projet/src/AnalyseurXML/src/xml.output
Terminals which are not used

   CLOSESPECIAL
   ENCODING
   STARTSPECIAL


Grammar

    0 $accept: document $end

    1 document: declarations element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt misc
    3             | /* empty */

    4 misc: COMMENT

    5 declarations: declaration
    6             | /* empty */

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE

    8 element: start attributes empty_or_content

    9 attributes: /* empty */
   10           | attributes NAME EQ VALUE

   11 start: START
   12      | NSSTART

   13 empty_or_content: SLASH CLOSE
   14                 | close_content_and_end name_or_nsname_opt CLOSE

   15 name_or_nsname_opt: NAME
   16                   | NSNAME
   17                   | /* empty */

   18 close_content_and_end: CLOSE content END

   19 content: content DATA
   20        | content misc
   21        | content element
   22        | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
EQ (258) 10
SLASH (259) 13
CLOSE (260) 7 13 14 18
END (261) 18
CLOSESPECIAL (262)
DOCTYPE (263) 7
ENCODING (264)
VALUE (265) 7 10
DATA (266) 19
COMMENT (267) 4
NAME (268) 7 10 15
NSNAME (269) 16
NSSTART (270) 12
START (271) 11
STARTSPECIAL (272)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
document (19)
    on left: 1, on right: 0
misc_seq_opt (20)
    on left: 2 3, on right: 1 2
misc (21)
    on left: 4, on right: 2 20
declarations (22)
    on left: 5 6, on right: 1
declaration (23)
    on left: 7, on right: 5
element (24)
    on left: 8, on right: 1 21
attributes (25)
    on left: 9 10, on right: 8 10
start (26)
    on left: 11 12, on right: 8
empty_or_content (27)
    on left: 13 14, on right: 8
name_or_nsname_opt (28)
    on left: 15 16 17, on right: 14
close_content_and_end (29)
    on left: 18, on right: 14
content (30)
    on left: 19 20 21 22, on right: 18 19 20 21


state 0

    0 $accept: . document $end

    DOCTYPE  shift, and go to state 1

    $default  reduce using rule 6 (declarations)

    document      go to state 2
    declarations  go to state 3
    declaration   go to state 4


state 1

    7 declaration: DOCTYPE . NAME NAME VALUE CLOSE

    NAME  shift, and go to state 5


state 2

    0 $accept: document . $end

    $end  shift, and go to state 6


state 3

    1 document: declarations . element misc_seq_opt

    NSSTART  shift, and go to state 7
    START    shift, and go to state 8

    element  go to state 9
    start    go to state 10


state 4

    5 declarations: declaration .

    $default  reduce using rule 5 (declarations)


state 5

    7 declaration: DOCTYPE NAME . NAME VALUE CLOSE

    NAME  shift, and go to state 11


state 6

    0 $accept: document $end .

    $default  accept


state 7

   12 start: NSSTART .

    $default  reduce using rule 12 (start)


state 8

   11 start: START .

    $default  reduce using rule 11 (start)


state 9

    1 document: declarations element . misc_seq_opt

    $default  reduce using rule 3 (misc_seq_opt)

    misc_seq_opt  go to state 12


state 10

    8 element: start . attributes empty_or_content

    $default  reduce using rule 9 (attributes)

    attributes  go to state 13


state 11

    7 declaration: DOCTYPE NAME NAME . VALUE CLOSE

    VALUE  shift, and go to state 14


state 12

    1 document: declarations element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . misc

    COMMENT  shift, and go to state 15

    $default  reduce using rule 1 (document)

    misc  go to state 16


state 13

    8 element: start attributes . empty_or_content
   10 attributes: attributes . NAME EQ VALUE

    SLASH  shift, and go to state 17
    CLOSE  shift, and go to state 18
    NAME   shift, and go to state 19

    empty_or_content       go to state 20
    close_content_and_end  go to state 21


state 14

    7 declaration: DOCTYPE NAME NAME VALUE . CLOSE

    CLOSE  shift, and go to state 22


state 15

    4 misc: COMMENT .

    $default  reduce using rule 4 (misc)


state 16

    2 misc_seq_opt: misc_seq_opt misc .

    $default  reduce using rule 2 (misc_seq_opt)


state 17

   13 empty_or_content: SLASH . CLOSE

    CLOSE  shift, and go to state 23


state 18

   18 close_content_and_end: CLOSE . content END

    $default  reduce using rule 22 (content)

    content  go to state 24


state 19

   10 attributes: attributes NAME . EQ VALUE

    EQ  shift, and go to state 25


state 20

    8 element: start attributes empty_or_content .

    $default  reduce using rule 8 (element)


state 21

   14 empty_or_content: close_content_and_end . name_or_nsname_opt CLOSE

    NAME    shift, and go to state 26
    NSNAME  shift, and go to state 27

    $default  reduce using rule 17 (name_or_nsname_opt)

    name_or_nsname_opt  go to state 28


state 22

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE .

    $default  reduce using rule 7 (declaration)


state 23

   13 empty_or_content: SLASH CLOSE .

    $default  reduce using rule 13 (empty_or_content)


state 24

   18 close_content_and_end: CLOSE content . END
   19 content: content . DATA
   20        | content . misc
   21        | content . element

    END      shift, and go to state 29
    DATA     shift, and go to state 30
    COMMENT  shift, and go to state 15
    NSSTART  shift, and go to state 7
    START    shift, and go to state 8

    misc     go to state 31
    element  go to state 32
    start    go to state 10


state 25

   10 attributes: attributes NAME EQ . VALUE

    VALUE  shift, and go to state 33


state 26

   15 name_or_nsname_opt: NAME .

    $default  reduce using rule 15 (name_or_nsname_opt)


state 27

   16 name_or_nsname_opt: NSNAME .

    $default  reduce using rule 16 (name_or_nsname_opt)


state 28

   14 empty_or_content: close_content_and_end name_or_nsname_opt . CLOSE

    CLOSE  shift, and go to state 34


state 29

   18 close_content_and_end: CLOSE content END .

    $default  reduce using rule 18 (close_content_and_end)


state 30

   19 content: content DATA .

    $default  reduce using rule 19 (content)


state 31

   20 content: content misc .

    $default  reduce using rule 20 (content)


state 32

   21 content: content element .

    $default  reduce using rule 21 (content)


state 33

   10 attributes: attributes NAME EQ VALUE .

    $default  reduce using rule 10 (attributes)


state 34

   14 empty_or_content: close_content_and_end name_or_nsname_opt CLOSE .

    $default  reduce using rule 14 (empty_or_content)
